8320437: [lworld] Adding internal null-restricted storage API points
Reviewed-by: thartmann, dsimms